--- a/src/templates/client.jade
+++ b/src/templates/client.jade
@@ -43,7 +43,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Динное название категории
                                 span.b-portfolio__type.b-portfolio__type_jpg JPG
                                 span.b-portfolio__like
@@ -51,14 +51,14 @@ block content
                             a.b-portfolio__item.b-portfolio__item_width_2.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='//placehold.it/428x204')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                 span.b-portfolio__type.b-portfolio__type_video ВИДЕО
                                 p.b-portfolio__date 10.02.2010
                             a.b-portfolio__item.b-portfolio__item_width_2.b-portfolio__item_height_2.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='//placehold.it/428x428')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                 span.b-portfolio__type.b-portfolio__type_story СТОРИС
                                 p.b-portfolio__date 10.02.2010
