--- a/src/templates/portfolio_type_2.jade
+++ b/src/templates/portfolio_type_2.jade
@@ -49,7 +49,7 @@ block content
                     a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                         .b-portfolio__content
-                            p.b-portfolio__title QIVI
+                            p.b-portfolio__title QIWI
                             p.b-portfolio__category Динное название категории
                         span.b-portfolio__type.b-portfolio__type_jpg JPG
                         span.b-portfolio__like
@@ -57,7 +57,7 @@ block content
                     a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                         .b-portfolio__content
-                            p.b-portfolio__title QIVI
+                            p.b-portfolio__title QIWI
                             p.b-portfolio__category Строительство
                         span.b-portfolio__type.b-portfolio__type_html5 HTML5
                         p.b-portfolio__date 10.02.2010
@@ -163,7 +163,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Динное название категории
                                 span.b-portfolio__type.b-portfolio__type_jpg JPG
                                 span.b-portfolio__like
@@ -171,7 +171,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                 span.b-portfolio__type.b-portfolio__type_html5 HTML5
                                 p.b-portfolio__date 10.02.2010
@@ -272,7 +272,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Динное название категории
                                 span.b-portfolio__type.b-portfolio__type_jpg JPG
                                 span.b-portfolio__like
@@ -280,7 +280,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                 span.b-portfolio__type.b-portfolio__type_html5 HTML5
                                 p.b-portfolio__date 10.02.2010
