--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -3,6 +3,11 @@ extends ./layouts/layout.jade
 block content
     .b-page
         .clearfix.b-portfolio
+            .container
+                h1.b-portfolio__header.b-portfolio__header_small В портфолио #[div.b-number-badge #[a.b-number-badge__inner(href="portfolio_type_1.html") 581]] работа
+
+                .b-portfolio__lead Поток чистых впечатления без лишних слов
+
             .b-portfolio__list
                 - for (var i=0; i<6;++i)
                     a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
@@ -22,7 +27,7 @@ block content
                     a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                         .b-portfolio__content
-                            p.b-portfolio__title QIVI
+                            p.b-portfolio__title QIWI
                             p.b-portfolio__category Динное название категории
                         span.b-portfolio__type.b-portfolio__type_jpg JPG
                         span.b-portfolio__like
@@ -30,7 +35,7 @@ block content
                     a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                         .b-portfolio__content
-                            p.b-portfolio__title QIVI
+                            p.b-portfolio__title QIWI
                             p.b-portfolio__category Строительство
                         span.b-portfolio__type.b-portfolio__type_html5 HTML5
                         p.b-portfolio__date 10.02.2010
@@ -376,7 +381,7 @@ block content
                                 .b-portfolio__content
                                     span.b-portfolio__type.b-portfolio__type_html5 Html5-баннеры
 
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
 
                                     p.b-portfolio__date 20 апреля 2016
@@ -394,7 +399,7 @@ block content
                                 .b-portfolio__content
                                     span.b-portfolio__type.b-portfolio__type_jpg Jpeg-баннеры
 
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Динное название категории
 
                                     p.b-portfolio__date 10 марта 2016
@@ -402,14 +407,14 @@ block content
                                 img.b-portfolio__image(src='assets/img/tmp/pr-200x600-adreals.jpg')
                                 .b-portfolio__content
                                     span.b-portfolio__type.b-portfolio__type_html5 Html5-баннеры
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                     p.b-portfolio__date 20 апреля 2016
                             a.b-portfolio__item(href='#')
                                 img.b-portfolio__image(src='assets/img/tmp/pr-200x300-bosch-rotak.jpg')
                                 .b-portfolio__content
                                     span.b-portfolio__type.b-portfolio__type_html5 Html5-баннеры
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                     p.b-portfolio__date 20 апреля 2016
                             a.b-portfolio__item(href='#')
@@ -500,7 +505,7 @@ block content
                                 .b-portfolio__content
                                     span.b-portfolio__type.b-portfolio__type_html5 Html5-баннеры
 
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
 
                                     p.b-portfolio__date 20 апреля 2016
@@ -518,7 +523,7 @@ block content
                                 .b-portfolio__content
                                     span.b-portfolio__type.b-portfolio__type_jpg Jpeg-баннеры
 
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Динное название категории
 
                                     p.b-portfolio__date 10 марта 2016
@@ -526,14 +531,14 @@ block content
                                 img.b-portfolio__image(src='assets/img/tmp/pr-200x600-adreals.jpg')
                                 .b-portfolio__content
                                     span.b-portfolio__type.b-portfolio__type_html5 Html5-баннеры
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                     p.b-portfolio__date 20 апреля 2016
                             a.b-portfolio__item(href='#')
                                 img.b-portfolio__image(src='assets/img/tmp/pr-200x300-bosch-rotak.jpg')
                                 .b-portfolio__content
                                     span.b-portfolio__type.b-portfolio__type_html5 Html5-баннеры
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                     p.b-portfolio__date 20 апреля 2016
                             a.b-portfolio__item(href='#')
