--- a/src/templates/portfolio_type_3.jade
+++ b/src/templates/portfolio_type_3.jade
@@ -64,7 +64,7 @@ block content
                     a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                         .b-portfolio__content
-                            p.b-portfolio__title QIVI
+                            p.b-portfolio__title QIWI
                             p.b-portfolio__category Динное название категории
                         span.b-portfolio__type.b-portfolio__type_jpg JPG
                         span.b-portfolio__like
@@ -72,7 +72,7 @@ block content
                     a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                         .b-portfolio__content
-                            p.b-portfolio__title QIVI
+                            p.b-portfolio__title QIWI
                             p.b-portfolio__category Строительство
                         span.b-portfolio__type.b-portfolio__type_html5 HTML5
                         p.b-portfolio__date 10.02.2010
@@ -178,7 +178,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Динное название категории
                                 span.b-portfolio__type.b-portfolio__type_jpg JPG
                                 span.b-portfolio__like
@@ -186,7 +186,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                 span.b-portfolio__type.b-portfolio__type_html5 HTML5
                                 p.b-portfolio__date 10.02.2010
@@ -287,7 +287,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Динное название категории
                                 span.b-portfolio__type.b-portfolio__type_jpg JPG
                                 span.b-portfolio__like
@@ -295,7 +295,7 @@ block content
                             a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                                 img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                                 .b-portfolio__content
-                                    p.b-portfolio__title QIVI
+                                    p.b-portfolio__title QIWI
                                     p.b-portfolio__category Строительство
                                 span.b-portfolio__type.b-portfolio__type_html5 HTML5
                                 p.b-portfolio__date 10.02.2010
