--- a/src/templates/portfolio_type_4.jade
+++ b/src/templates/portfolio_type_4.jade
@@ -73,7 +73,7 @@ block content
                     a.b-portfolio__item.emerge(href='#portfolio_1', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                         .b-portfolio__content
-                            p.b-portfolio__title QIVI
+                            p.b-portfolio__title QIWI
                             p.b-portfolio__category Динное название категории
                         span.b-portfolio__type.b-portfolio__type_jpg JPG
                         span.b-portfolio__like
@@ -81,7 +81,7 @@ block content
                     a.b-portfolio__item.emerge(href='#portfolio_2', rel='portfolio', data-effect="zoom", data-origin="bottom", data-expose="true")
                         img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                         .b-portfolio__content
-                            p.b-portfolio__title QIVI
+                            p.b-portfolio__title QIWI
                             p.b-portfolio__category Строительство
                         span.b-portfolio__type.b-portfolio__type_html5 HTML5
                         p.b-portfolio__date 10.02.2010
