--- a/src/templates/review.jade
+++ b/src/templates/review.jade
@@ -44,7 +44,7 @@ block content
                         a.b-portfolio__item(href='portfolio_item_1_ajax.html', rel='portfolio', data-effect="relax", data-origin="bottom", data-expose="true")
                             img.b-portfolio__image(src='assets/img/tmp/portfolio3.png')
                             .b-portfolio__content
-                                p.b-portfolio__title QIVI
+                                p.b-portfolio__title QIWI
                                 p.b-portfolio__category Динное название категории
                             span.b-portfolio__type.b-portfolio__type_jpg JPG
                             span.b-portfolio__like
@@ -52,7 +52,7 @@ block content
                         a.b-portfolio__item(href='portfolio_item_2_ajax.html', rel='portfolio', data-effect="relax", data-origin="bottom", data-expose="true")
                             img.b-portfolio__image(src='assets/img/tmp/portfolio2.png')
                             .b-portfolio__content
-                                p.b-portfolio__title QIVI
+                                p.b-portfolio__title QIWI
                                 p.b-portfolio__category Строительство
                             span.b-portfolio__type.b-portfolio__type_html5 HTML5
                             p.b-portfolio__date 10.02.2010
